5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4153/executions/1758_1580.log
== TEST (2019-05-27 12:48:43) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(V1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
print(sf)
print(sa)
print(sr)
print(mn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:49:40) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(V1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	i = i + 1
print(sf)
print(sa)
print(sr)
print(mn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:50:16) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	i = i + 1
print(sf)
print(sa)
print(sr)
print(mn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:50:33) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	i = i + 1
print(sf)
print(sa)
print(sr)
print(mn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:50:33) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	i = i + 1
print(sf)
print(sa)
print(sr)
print(mn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:50:34) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	i = i + 1
print(sf)
print(sa)
print(sr)
print(mn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:50:34) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	i = i + 1
print(sf)
print(sa)
print(sr)
print(mn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:50:35) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	i = i + 1
print(sf)
print(sa)
print(sr)
print(mn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:50:57) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	i = i + 1
print(sf)
print(sa)
print(sr)
print(mn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:51:59) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	i = i + 1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:55:44) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	i = i + 1
w = 0
h = 0
v3 = zeros(size(v1))
while(w < size(v1)):
	if(v1[w] >= 6.0):
		v3[h] = v1[w]
		h = h + 1
	w = w + 1
print(v3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 12:59:15) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	elif(v1[i] != -1):
		p = p + 1
	i = i + 1
w = 0
h = 0
v3 = zeros(size(p))
while(w < size(v1)):
	if(v1[w] >= 6.0):
		v3[h] = v1[w]
		h = h + 1
	w = w + 1
print(v3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:00:40) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	elif(v1[i] != -1):
		p = p + 1
	i = i + 1
w = 0
h = 0
v3 = zeros(p)
while(w < size(v1)):
	if(v1[w] >= 6.0):
		v3[h] = v1[w]
		h = h + 1
	w = w + 1
print(v3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:00:46) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	elif(v1[i] != -1):
		p = p + 1
	i = i + 1
w = 0
h = 0
v3 = zeros(p)
while(w < size(v1)):
	if(v1[w] >= 6.0):
		v3[h] = v1[w]
		h = h + 1
	w = w + 1
print(v3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:02:08) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	elif(v1[i] != -1):
		p = p + 1
	i = i + 1
w = 0
h = 0
v3 = zeros(p, dtype=float)
while(w < size(v1)):
	if(v1[w] >= 6.0):
		v3[h] = v1[w]
		h = h + 1
	w = w + 1
print(v3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:03:50) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	elif(v1[i] != -1):
		p = p + 1
	i = i + 1
r = 0
s = 0
v3 = zeros(Qn,dtype=float)
while(r < size(v1)):
	if(v1[r] >= 0):
		v3[s] = V[r]
		s = s + 1
	r = r + 1
print(v3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:04:07) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	elif(v1[i] != -1):
		p = p + 1
	i = i + 1
r = 0
s = 0
v3 = zeros(p,dtype=float)
while(r < size(v1)):
	if(v1[r] >= 0):
		v3[s] = V[r]
		s = s + 1
	r = r + 1
print(v3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:04:24) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	elif(v1[i] != -1):
		p = p + 1
	i = i + 1
r = 0
s = 0
v3 = zeros(p,dtype=float)
while(r < size(v1)):
	if(v1[r] >= 0):
		v3[s] = v1[r]
		s = s + 1
	r = r + 1
print(v3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:04:56) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	elif(v1[i] != -1):
		p = p + 1
	i = i + 1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:05:36) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	elif(v1[i] != -1.0):
		p = p + 1
	i = i + 1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:05:49) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	elif(v1[i] != -1.0):
		p = p + 1
	i = i + 1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:07:29) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	i = i + 1
r = 0
while(r < size(v1)):
	p = p + 1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:07:46) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif((v1[i] != -1.0) and (v1[i] >= 6.0)):
		mn = mn + 1
	i = i + 1
r = 0
while(r < size(v1)):
	p = p + 1
print(p)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:09:29) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
mn = 0#media dos alunos presentes
p = 0
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	elif(v1[i] != -1.0):
		mn = mn + 1
	i = i + 1
print(sf)
print(sa)
print(sr)
print(mn)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:11:18) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
print(sf)
print(sa)
print(sr)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:14:32) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
print(sf)
print(sa)
print(sr)
print(v3)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:15:25) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
y = sum(v3)/size(v3)
print(sf)
print(sa)
print(sr)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:15:29) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
y = sum(v3)/size(v3)
print(sf)
print(sa)
print(sr)
print(y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:18:14) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
q = max(v1)
a = 0
while(a < size(v3)):
	
y = sum(v3)/size(v3)
print(sf)
print(sa)
print(sr)
print(round(y, 2))
print(q)
-- ERROR:
File "XXXX", line 32
    y = sum(v3)/size(v3)
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:18:27) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
q = max(v1)
a = 0

	
y = sum(v3)/size(v3)
print(sf)
print(sa)
print(sr)
print(round(y, 2))
print(q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:20:34) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
q = max(v1)
a = 0
while(v1[a] != 8):
	a = a + 1
	
y = sum(v3)/size(v3)
print(sf)
print(sa)
print(sr)
print(round(y, 2))
print(a)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:21:01) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
q = max(v1)
a = 0
while(v1[a] != 8):
	a = a + 1
	
y = sum(v3)/size(v3)
print(sf)
print(sa)
print(sr)
print(round(y, 2))
print(v2[3])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:21:28) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
q = max(v1)
a = 0
while(v1[a] != 8):
	a = a + 1
	
y = sum(v3)/size(v3)
print(sf)
print(sa)
print(sr)
print(round(y, 2))
print(v2[a])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:22:03) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
q = max(v1)
a = 0
while(v1[a] != 8):
	a = a + 1
	
y = sum(v3)/size(v3)
print(sf)
print(sa)
print(sr)
print(round(y, 2))
print(v2[a])
-- EXECUTION TIME:
0.456886
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
B
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 13:22:27) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
q = max(v1)
a = 0
while(v1[a] != 8):
	a = a + 1
	
y = sum(v3)/size(v3)
print(sf)
print(sa)
print(sr)
print(round(y, 2))
print(v2[a])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-27 13:23:16) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
q = max(v1)
a = 0
while(v1[a] != 8):
	a = a + 1
	
y = sum(v3)/size(v3)
print(sf)
print(sa)
print(sr)
print(round(y, 2))
print(v2[a])
-- EXECUTION TIME:
0.337713
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
B
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:

-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 10:06:19) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
q = max(v1)
a = 0
while(v1[a] != 8):
	a = a + 1
	
y = sum(v3)/size(v3)
print(sf)
print(sa)
print(sr)
print(round(y, 2))
print(v2[a])
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 10:28:10) 
-- CODE:
from numpy import *
# Vetor de notas
v1 = array(eval(input("Insira um vetor: ")))
# Vetor de nomes
v2 = array(eval(input("Insira um vetor: ")))

i = 0
sf = 0 #soma dos alunos que faltaram
sa = 0 #soma dos alunos aprovados
sr = 0 #soma dos alunos presentes reprovados
while(i < size(v1)):
	if(v1[i] == -1.0):
		sf = sf + 1
	elif(v1[i] >= 6.0):
		sa = sa + 1
	elif((v1[i] != -1.0) and (v1[i] < 6.0)):
		sr = sr + 1
	i = i + 1
x = size(v1) - sf
v3 = zeros(x)
r = 0
h = 0
while(r < size(v1)):
	if(v1[r] != -1):
		v3[h] = v1[r]
		h = h + 1
	r = r +1
q = max(v1)
a = 0
while(v1[a] != max(v1)):
	a = a + 1
	
y = sum(v3)/size(v3)
print(sf)
print(sa)
print(sr)
print(round(y, 2))
print(v2[a])
-- EXECUTION TIME:
0.4512
-- TEST CASE 1:
---- input:
[9,8,7,6,5,4,3,2,1,-1,-1,-1]
['A','B','C','D','E','F','G','H','I','J','K','L']
---- correct output:
3
4
5
5.0
A
---- user output:
3
4
5
5.0
A
-- TEST CASE 2:
---- input:
[-1,1.2,-1,2.3,-1,3.4,-1,4.5,-1,5.6,-1]
['ALICE','BENTO','CLARA','DAVI','ELSON','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
6
0
5
3.4
JULIA
---- user output:
6
0
5
3.4
JULIA
-- TEST CASE 3:
---- input:
[1.23,3.45,5.67,6.78,7.89,8.9,9,10,0,9.8,7.6]
['CLARA','DAVI','ELSON','ALICE','BENTO','FLAVIO','GABI','HELOISA','IRIS','JULIA','KARLA']
---- correct output:
0
7
4
6.39
HELOISA
---- user output:
0
7
4
6.39
HELOISA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
